charts/edge-gateway/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: edge-gateway
  labels:
    kubernetes.io/metadata.name: edge-gateway
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
